# langblock

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
core/databases/: lance.py
examples/qna/: dataset.json  ingestion.py  main.py
models/chat_models/: __init__.py  llamacpp_chat.py  ollama_chat.py
models/embedding_models/: __init__.py  _base.py  llamacpp_embedding.py  ollama_embedding.py
models/reranking_models/: __init__.py  _base.py  huggingface_reranker.py  llamacpp_reranker.py
