[project]
name = "langblock"
version = "0.1.0"
description = "A modular Python RAG framework with pluggable blocks for embeddings, reranking, vector search, and chat models."
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "black==25.11.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "filelock==3.20.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "lance-namespace==0.0.20",
    "lance-namespace-urllib3-client==0.0.20",
    "lancedb==0.25.3",
    "langchain-core==1.0.4",
    "langchain-openai==1.0.2",
    "langsmith==0.4.42",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==2.3.4",
    "ollama==0.6.0",
    "openai==2.7.2",
    "orjson==3.11.4",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "pyarrow==22.0.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pylance==0.39.0",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.3.0",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentence-transformers==5.1.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "zstandard==0.25.0",
]
